--- a/Coffee Machine/Problems/lesson-info.yaml
+++ b/Coffee Machine/Problems/lesson-info.yaml
@@ -14,3 +14,12 @@ content:
 - Fill the declaration
 - Initializing an array of integers
 - Initializing an array of longs
+- Javadoc comment
+- Uncomment a line
+- Printing only the longest line
+- Print strings in the reverse order
+- Hiring a chef
+- Printing each word in a new line
+- Squirrels and nuts
+- The sum of digits
+- Snail
