Basic syntax and simple progress  22/42 Coffee Machine progress 1/6 Intro to programming progress 3/3 Operational systems progress 2/2 Command line progress 2/2

--- a/Coffee Machine/Problems/lesson-info.yaml
+++ b/Coffee Machine/Problems/lesson-info.yaml
@@ -23,3 +23,13 @@ content:
 - Squirrels and nuts
 - The sum of digits
 - Snail
+- Distance
+- Liquid pressure
+- Find X
+- Check the value
+- Check the given numbers are different
+- Exactly one parameter is positive
+- Decrement all
+- Replacing 'a' with 'b'
+- Check prefix ignoring the case
+- Comparing strings ignoring whitespaces
