--- a/Coffee Machine/Coffee Machine/Brush up your code/task-info.yaml
+++ b/Coffee Machine/Coffee Machine/Brush up your code/task-info.yaml
@@ -423,6 +423,9 @@ files:
         }
     }
   learner_created: true
+- name: src/machine/State.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/33/stages/180/implement
-status: Unchecked
+status: Solved
 record: -1
