--- a/Web Quiz Engine/Problems/lesson-info.yaml
+++ b/Web Quiz Engine/Problems/lesson-info.yaml
@@ -3,3 +3,15 @@ content:
 - Print  Hello, Java!
 - Print  We are robots!
 - Numbers divisible by six
+- Army
+- Preparing full name
+- Calculator with four methods
+- Decompose a math function
+- Find the nearest number
+- Saying animals
+- Shapes area
+- Publications
+- calculator
+- Squares list
+- Companies
+- Split a list into sublists
