--- a/Web Quiz Engine/course-info.yaml
+++ b/Web Quiz Engine/course-info.yaml
@@ -10,5 +10,6 @@ summary: In the Internet, you can often find sites where you need to answer some
 programming_language: Java
 programming_language_version: 11
 content:
+- Web Quiz Engine
 - Problems
 mode: Study
